--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "create-react-app": "^3.0.1",
+    "http-proxy-middleware": "^0.19.1",
+    "jwt-decode": "^2.2.0",
     "node-sass": "^4.12.0",
     "npm": "^6.10.1",
     "react": "^16.8.6",
