--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+/backend/sessions
+yarn.lock
+package-lock.json
+
 /backend/node_modules
 /backend/config/keys.js
-package-lock.json
