--- a/backend/package.json
+++ b/backend/package.json
@@ -16,13 +16,17 @@
     "concurrently": "^4.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.6",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "session-file-store": "^1.3.1",
     "shortid": "^2.2.14",
+    "uuid": "^3.3.2",
     "validator": "^11.1.0"
   },
   "devDependencies": {
