--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "npm": "^6.10.1",
     "react": "^16.8.6",
     "react-beautiful-dnd": "^11.0.5",
+    "react-cookie": "^4.0.1",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-router-modal": "^1.5.2",
