--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.8.6",
     "react-beautiful-dnd": "^11.0.5",
     "react-cookie": "^4.0.1",
+    "react-datepicker": "^2.8.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-router-modal": "^1.5.2",
